infra/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orquestrador-java-21
  namespace: projetos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orquestrador-java-21
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        traffic.sidecar.istio.io/excludeOutboundPorts: "8126"
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
      labels:
        app: orquestrador-java-21
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: orquestrador-java
        tags.datadoghq.com/version: "1.0.28"
        admission.datadoghq.com/enabled: "true"
    spec:
      containers:
        - name: orquestrador-java-21
          image: localhost:5000/orquestrador.java.21:1.0.28
          ports:
            - containerPort: 8080
