infra/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orquestrador-java-21
  namespace: projetos
spec:
  selector:
    app: orquestrador-java-21
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
